Update daily summary file for 2025-06-27

--- a/daily/2025-06-27.md
+++ b/daily/2025-06-27.md
@@ -7,59 +7,56 @@
 #### **AI内容摘要**
 
 ```
-ElevenLabs发布新语音设计工具，出门问问推出AI硬件。
-大模型研究MMSearch-R1有进展，AI安全工具XBOW破纪录。
-大模型高考成绩显著提升，微软与OpenAI谈判遇阻。
+出门问问发布AI硬件TicNote，ElevenLabs推语音生成V3。
+AI安全公司XBOW漏洞检测超人，大模型高考成绩达985水平。
+微软与OpenAI谈判陷僵局。AI应用将趋向轻量化，强调上下文工程。
 ```
 
 
 
 #### **AI产品与功能更新**
-
-1.  ElevenLabs发布了新一代**语音设计工具Voice Design v3**，它能通过**文本提示词**创造出**高度个性化的语音**😮，拥有**更高音质**和**更丰富的表达力**，并且支持**70多种语言**和**数百种口音**🌐。这款工具能**细致控制**语音的个性与韵律，非常适合**制作级用途**，并通过['更多详情'](https://elevenlabs.io/voice-design)的**在线体验**和**API接口**为开发者提供强大功能，让声音创作变得无限可能！✨
-    <br/> [![ElevenLabs语音设计界面](https://assets-v2.circle.so/vijiutr3y6vtx0je0jj3ck76slvc)](https://assets-v2.circle.so/vijiutr3y6vtx0je0jj3ck76slvc) <br/> [![Voice Design v3操作界面](https://assets-v2.circle.so/ju51ik2e8hzybvd29eehyf5n1rdj)](https://assets-v2.circle.so/ju51ik2e8hzybvd29eehyf5n1rdj) <br/> [![语音参数调整示例](https://assets-v2.circle.so/pv2uwy79y1zs7okoh09dymer4vpw)](https://assets-v2.circle.so/pv2uwy79y1zs7okoh09dymer4vpw) <br/>
-
-2.  出门问问创始人兼CEO**李志飞**在北京推出了全新的**AI硬件产品TicNote**🖊️，这款厚度仅**3mm**的智能设备搭载了基于**大语言模型**的**Shadow AI技术**，能实现**AI转写**、**总结**等超实用功能，简直是专业用户的AI随身助手！🚀 李志飞对大模型可行性保持谨慎，他强调未来智能硬件要避开巨头竞争，通过**软硬结合**找到独特市场切入点，并透露将推出更多搭载**Shadow AI**的产品，比如**TicNote Watch**和**Pods**，让人充满期待！🤩
-    <br/> [![TicNote智能硬件产品](https://pic.chinaz.com/picmap/202304171730169988_2.jpg)](https://pic.chinaz.com/picmap/202304171730169988_2.jpg) <br/>
+1.  出门问问的创始人兼CEO李志飞在北京推出了全新的**AI硬件产品** **TicNote** 💡✨。这款设备仅3mm厚，能磁吸在手机上，它搭载了基于**DeepSeek-R1**等大语言模型的**Shadow AI**技术，具备AI**转写**和**总结**等超实用功能。李志飞还透露，公司未来将避开与科技巨头的正面竞争，转而推出更多搭载**Shadow AI**的智能硬件，以找到独特的市场切入点，并强调**硬件与软件结合**才是公司的发展方向哦！
+    <br/> ![出门问问TicNote](https://pic.chinaz.com/picmap/202304171730169988_2.jpg) <br/>
+2.  **ElevenLabs** 🎙️🎶最近发布了他们的下一代语音生成神器 **Voice Design v3** 🚀。这个工具超厉害，用户只需输入文本提示词，就能创造出拥有**高音质**且表达力超丰富的**个性化语音**，而且它还支持70多种语言及数百种本地口音呢！它能让你对语音的个性与韵律进行细致入微的控制，目前已向所有用户开放，简直是创意和商业用途的宝藏工具！快去在线体验一下吧：['ElevenLabs Voice Design'](https://elevenlabs.io/voice-design)。
+    <br/> ![Voice Design v3界面](https://assets-v2.circle.so/vijiutr3y6vtx0je0jj3ck76slvc) <br/>
+    <br/> ![Voice Design v3功能](https://assets-v2.circle.so/ju51ik2e8hzybvd29eehyf5n1rdj) <br/>
+    <br/> ![Voice Design v3支持语言](https://assets-v2.circle.so/pv2uwy79y1zs7okoh09dymer4vpw) <br/>
 
 #### **AI前沿研究**
-
-1.  本文提出了一个名为**MMSearch-R1**的创新方法💡，它通过**端到端强化学习框架**，让**大型多模态模型（LMMs）**能够在**真实互联网环境**中进行**按需、多轮搜索**，简直是AI"上网冲浪”的新境界！🏄‍♂️ 实验证明，这个模型不仅在**知识密集型VQA任务**中轻松**超越相同规模的RAG基线模型**，还能在**减少超过30%的搜索调用**的情况下，匹配甚至达到更大RAG模型的性能，效率与智慧并存！✨ ['论文地址'](https://arxiv.org/abs/2506.20670)
+1.  **MMSearch-R1** 🔬🔍是一个开创性的**端到端强化学习框架**，旨在让**多模态大模型 (LMMs)** 🧠能够在真实的互联网环境中，根据需求进行多轮搜索，通过巧妙地整合图像与文本搜索工具，实现高效的问题解决！这个模型在**知识密集型**和**信息查询型VQA任务**上表现尤为出色，不仅超越了同等规模的**检索增强生成 (RAG)** 基线模型，甚至能在减少超过30%搜索调用的情况下，匹配更大尺寸RAG模型的性能。太厉害啦！✨ ['论文地址'](https://arxiv.org/abs/2506.20670)
 
 #### **AI行业展望与社会影响**
-
-1.  **AI安全公司XBOW**自主研发的**AI工具**"XBOW”简直是网络安全界的"黑马”！🐴 它近期在**HackerOne**全球漏洞众测平台上首次**超越人类研究员**，霸气**登顶美国排行榜**，这标志着**AI**在**漏洞检测**领域实现了**里程碑式突破**🎉。这款工具能**全自动进行渗透测试**，已经提交了近**1060个漏洞**，并成功获得了**7500万美元B轮融资**，预示着**AI驱动的防御工具**将彻底扭转网络安全攻防的格局，未来可期！🛡️
-    <br/> [![XBOW工具HackerOne榜首](https://upload.chinaz.com/2025/0626/6388654490605766348022671.png)](https://upload.chinaz.com/2025/0626/6388654490605766348022671.png) <br/> [![XBOW安全漏洞检测](https://upload.chinaz.com/2025/0626/6388654491737208217775020.png)](https://upload.chinaz.com/2025/0626/6388654491737208217775020.png) <br/>
-
-2.  近日，字节跳动Seed团队集结了**Gemini 2.5 Pro**、**豆包 Seed 1.6-Thinking**等五款**主流大模型**，对2025年山东高考真题进行了**全科闭卷测评**📊，结果太惊人了！**豆包**以683分斩获文科第一🏆，**Gemini**则以655分拔得理科头筹，这些大模型在一年内成绩**显著提升超100分**，已达到**冲刺清北、保底985**的水平🤯，简直是AI界的"学霸”！它们展现出强大的**逻辑推理**和**深度问题解决能力**，预示着**AI未来**将不再局限于标准化考试，而是要解决真实世界中的复杂难题，令人期待！🌍 ['更多详情'](https://www.jiqizhixin.com/articles/2025-06-26-12)
-    <br/> [![大模型高考成绩对比](https://image.jiqizhixin.com/uploads/editor/93a8c682-cd72-4b9e-b193-2de6000ed32e/640.png)](https://image.jiqizhixin.com/uploads/editor/93a8c682-cd72-4b9e-b193-2de6000ed32e/640.png) <br/>
+1.  **AI安全公司** **XBOW** 🛡️💥凭借其自主研发的AI工具"**XBOW**”，首次超越人类研究员，成功登顶全球知名**漏洞众测平台** **HackerOne** 的美国排行榜第一名！这标志着AI在**漏洞检测**领域取得了里程碑式的突破👏。这款**全自动渗透测试系统**已经在HackerOne提交了近1060个漏洞，并成功获得了7500万美元的B轮融资💰，这预示着AI将彻底重塑**网络安全**格局，加速漏洞的发现与修复。
+    <br/> ![XBOW漏洞检测界面](https://upload.chinaz.com/2025/0626/6388654490605766348022671.png) <br/>
+    <br/> ![XBOW排名](https://upload.chinaz.com/2025/0626/6388654491737208217775020.png) <br/>
+2.  最近，字节跳动Seed团队对包括**豆包Seed 1.6-Thinking**和**Gemini 2.5 Pro**在内的五款主流**大模型**进行了评测 🎓✨。它们在2025年**山东高考真题**全科闭卷测评中表现卓越，其中豆包荣获文科第一（683分），Gemini则摘得理科第一（655分）的桂冠，总体成绩已达到冲刺清华北大、保底985大学的水平！仅仅一年时间，大模型的高考成绩就提升了超过百分，展现出强大的**文本理解**、**多模态理解**和**推理能力** 🚀。这表明高考已不再是检验其"智力”的挑战，未来它们应更深入地**融入科学研究**和**艺术创作**等领域，潜力无限呀！🎨 ['更多详情'](https://www.jiqizhixin.com/articles/2025-06-26-12)
+    <br/> ![大模型高考成绩](https://image.jiqizhixin.com/uploads/editor/93a8c682-cd72-4b9e-b193-2de6000ed32e/640.png) <br/>
+    <br/> ![大模型高考分数分布](https://image.jiqizhixin.com/uploads/editor/8c33110c-0bd7-40f4-ae05-e011ef458218/640.png) <br/>
 
 #### **开源TOP项目**
-
-1.  **edit**是一个通用的**编辑**项目，在GitHub上已经获得了令人惊叹的**10606 颗星**⭐，旨在为用户提供全面而强大的**编辑解决方案**。更多详情请访问['项目地址'](https://github.com/microsoft/edit)。
-
-2.  **base-ui**是一个拥有**3623 颗星**的开源项目，它巧妙地提供了**无样式UI组件**🎨，旨在帮助开发者轻松构建**可访问的Web应用程序**和**设计系统**，而且它可是由知名UI库的创建者精心打造的哦！更多详情请访问['项目地址'](https://github.com/mui/base-ui)。
-
-3.  **gitleaks**是一个广受欢迎的开源项目，拥有惊人的**20704 颗星**🌟，它的主要功能是帮助用户在**Git仓库**中精准**查找**并**防止敏感信息（即秘密）泄露**，简直是代码安全的守护神！🔒 更多详情请访问['项目地址'](https://github.com/gitleaks/gitleaks)。
+1.  **edit** 📝⭐是一个由微软发布的**开源项目**，旨在满足人们普遍的**编辑**需求，目前已经获得了**10606**颗星。这个项目致力于提供基础的编辑功能，更多详情请访问['项目地址'](https://github.com/microsoft/edit)。
+2.  **base-ui** 🧩💻⭐是一个拥有**3623**颗星的**开源项目**，它由Radix、Floating UI和Material UI的创建者们精心打造。这个项目提供**无样式的UI组件**，旨在帮助开发者们更高效地构建**可访问的Web应用程序**和灵活的**设计系统**。更多详情请访问['项目地址'](https://github.com/mui/base-ui)。
+3.  **gitleaks** 🔒💡⭐是一个广受欢迎的**开源安全工具**，坐拥**20704**颗星！它的核心功能是自动化地在代码仓库中**检测**并**查找**潜在的**敏感信息**（比如API密钥、密码等），从而有效地规避因泄密而带来的安全风险。更多详情请访问['项目地址'](https://github.com/gitleaks/gitleaks)。
 
 #### **社媒分享**
-
-1.  Simon的白日梦分享了一篇高质量文章，深入阐释了**AI Agent**的**"三段进化论”**，以及**MCP**和**A2A**这两种**核心协议**如何巧妙地规范Agent的**工具调用**和**彼此协作**🤝，预示着AI Agent未来将走向激动人心的**多智能体协作**时代！文章还详细介绍了ReAct与Plan-and-Execute等**思考模型**，强调了**Human-in-the-loop**在Agent系统中的**关键作用**，并通过**Golang工程实践**提供了构建复杂Agent系统的实用指南，干货满满！🤩 ['更多详情'](https://m.okjike.com/originalPosts/685d58d062739eeda3b9d838)
-    <br/> [![AI Agent三段进化](https://cdnv2.ruguoapp.com/Fu9_NrDOl23BPTkVMqCuo11qNhYQv3.jpg)](https://cdnv2.ruguoapp.com/Fu9_NrDOl23BPTkVMqCuo11qNhYQv3.jpg) <br/> [![MCP与A2A协议](https://cdnv2.ruguoapp.com/Fkej5CodNU5eYZ0QvY6GUlRbLWSZv3.jpg)](https://cdnv2.ruguoapp.com/Fkej5CodNU5eYZ0QvY6GUlRbLWSZv3.jpg) <br/> [![Agent思考模型](https://cdnv2.ruguoapp.com/FllJQZ_kio0pQNa11CUfnPvOhWbOv3.jpg)](https://cdnv2.ruguoapp.com/FllJQZ_kio0pQNa11CUfnPvOhWbOv3.jpg) <br/>
-
-2.  Simon的白日梦兴奋地表示，**OmniGen2**这款**开源统一多模态生成模型**太给力了！🥳 在短短三个月内，它竟然能实现**GPT-4o**约七成的**图像编辑能力**，这比他原先预期的半年时间快了好多倍呢！这款模型功能强大，不仅涵盖了**文本生成图像**、**图像编辑**、**图像理解**和**多图融合**等多种超酷功能，而且**高效率、低资源门槛**，简直是开源界**"Any-to-Any”多模态生成范式**的杰出代表！🌟 更多信息请点击['更多详情'](https://m.okjike.com/originalPosts/685d56339c2e39aa22e64bbb)访问其社交媒体链接，并在['项目地址'](https://huggingface.co/OmniGen2/OmniGen2)及['在线试玩demo'](https://huggingface.co/spaces/OmniGen2/OmniGen2)亲自体验其魔力吧！
-    <br/> [![OmniGen2图像生成示例](https://cdnv2.ruguoapp.com/ltYbExXHHBX6-IiH6poCRt4V6YHWv3.png)](https://cdnv2.ruguoapp.com/ltYbExXHHBX6-IiH6poCRt4V6YHWv3.png) <br/> [![OmniGen2多模态功能](https://cdnv2.ruguoapp.com/ljDKpsINlzylflPcueaB7KC5dTqSv3.png)](https://cdnv2.ruguoapp.com/ljDKpsINlzylflPcueaB7KC5dTqSv3.png) <br/> [![OmniGen2应用展示](https://cdnv2.ruguoapp.com/ls34LcFxuRD1Baz2eGvajo2pvO52v3.jpg)](https://cdnv2.ruguoapp.com/ls34LcFxuRD1Baz2eGvajo2pvO52v3.jpg) <br/>
-
-3.  兔撕鸡大老爷惊呼**小米AI眼镜**的功能简直**"绝了”**！😎 这款产品巧妙地将**第一人称相机**、**开放式耳机**和**随身AI入口**集于一身，旨在通过**沉浸式拍摄**📸、**全天佩戴舒适聆听**🎶以及**解放双手的AI交互**（比如轻松**百科问答**和**扫码支付**）来全面提升用户体验，简直是未来科技的代表作！✨ 此外，**小米AI眼镜**还特别提供了带有**电致变色功能**的版本，支持**四档调节**甚至**彩色选项**，酷炫到没朋友！标准版售价**1999元起**，想尝鲜的朋友们快冲呀！🚀 更多详情请点击['更多详情'](https://m.okjike.com/originalPosts/685d40dbadecea032f68a102)。
-    <br/> [![小米AI眼镜外观](https://cdnv2.ruguoapp.com/FiYt7G4BWf7RKS6v7g6lhoD0c0CUv3.jpg)](https://cdnv2.ruguoapp.com/FiYt7G4BWf7RKS6v7g6lhoD0c0CUv3.jpg) <br/> [![AI眼镜佩戴效果](https://cdnv2.ruguoapp.com/Fp8KaIdLbsz62uQfat1l48cKg77Kv3.jpg)](https://cdnv2.ruguoapp.com/Fp8KaIdLbsz62uQfat1l48cKg77Kv3.jpg) <br/> [![AI眼镜功能演示](https://cdnv2.ruguoapp.com/FikgmCpcfMiwXeahMtlwT5OC9oaJv3.jpg)](https://cdnv2.ruguoapp.com/FikgmCpcfMiwXeahMtlwT5OC9oaJv3.jpg) <br/>
-
-4.  小互爆料称，**微软**正暗示可能要放弃与**OpenAI**的谈判了！😱 原来，**OpenAI**计划转型为盈利性公司并寻求**IPO**，但这需要得到**微软**的批准，而且他们还希望修改目前微软所持有的**模型知识产权**和**收入分成协议**。由于**微软**对**OpenAI**提出的终止**AGI条款**，并以**特许权使用费与股权交换20%收入份额**的新报价不满意，**OpenAI**甚至在考虑采取"核选项”，指控**微软**存在**反竞争行为**，这出大戏简直是科技界的"宫斗剧”！😲 ['更多详情'](https://x.com/imxiaohu/status/1938130680636182595)。
-    <br/> [![微软OpenAI谈判图](https://pbs.twimg.com/media/GuVB3L_X0AA1A0L?format=jpg&name=orig)](https://pbs.twimg.com/media/GuVB3L_X0AA1A0L?format=jpg&name=orig) <br/> [![OpenAI IPO计划](https://pbs.twimg.com/media/GuVB3L9XwAADR9U?format=jpg&name=orig)](https://pbs.twimg.com/media/GuVB3L9XwAADR9U?format=jpg&name=orig) <br/>
-
-5.  Meng Shao分享了**Andrej Karpathy**的精辟观点，他认为我们应该将**"提示词工程” (prompt engineering)**升级为更深层次的**"上下文工程” (context engineering)**！🧠 他强调，在**AI应用**中，真正的挑战在于像搭积木般精准组合信息🧱，并以有条理的**"故事式”方式**呈现在**"上下文窗口”**中，而不仅仅是简单提问。这彻底打破了对AI应用仅仅是**"ChatGPT 包装”**的误解，实际开发工作包含了**拆解问题**、**选择模型**、**用户界面管理**、**缓存**和**安全防护**等一系列复杂而精细的任务呢！🤯 ['更多详情':](https://x.com/shao__meng/status/1938120617494253712)
-    <br/> [![上下文工程示意图](https://pbs.twimg.com/media/GuWWbAGbAE7zgH?format=jpg&name=orig)](https://pbs.twimg.com/media/GuWWbAGbAE7zgH?format=jpg&name=orig) <br/>
-
-6.  wwwgoubuli大胆预测，**AI**将引领一个**"事实生成轻量应用”**的全新时代，实现**"言出法随”**的即时应用，用户能像水电煤一样随时获取并销毁AI生成的**"一次性”**成果，简直是效率翻倍！⚡ 这一趋势得益于**高速推理技术**的内化以及**Google Gemini**带来的体验革新。他认为这会让当前许多需要**高成本开发和部署的应用**变得**"一文不值”**，并最终形成**纯模型提供商的垄断**格局，而**Google**则被他视为潜在的"魔法世界入口垄断者”，这个预测真是既大胆又引人深思！🤔 ['更多详情':](https://x.com/wwwgoubuli/status/1938082798973096160)
+1.  Simon的白日梦分享了一篇高质量文章，指出**AI Agent** 🤖🤝已演进至**多智能体协作阶段**，强调其发展趋势为**封装模型**增多、功能增强、灵活性和协议标准化，并最终走向**多Agent协作**。文章详细解析了**AI Agent**的**三段进化论**、**MCP**与**A2A协议**，突出人类在**多Agent系统**中的**核心作用**，并通过**Golang工程实践**展示了构建复杂Agent系统的指南 💡。['更多详情'](https://m.okjike.com/originalPosts/685d58d062739eeda3b9d838)
+    <br/> ![AI Agent协作图](https://cdnv2.ruguoapp.com/Fu9_NrDOl23BPTkVMqCuo11qNhYQv3.jpg) <br/>
+    <br/> ![多Agent系统](https://cdnv2.ruguoapp.com/Fkej5CodNU5eYZ0QvY6GUlRbLWSZv3.jpg) <br/>
+    <br/> ![AI Agent发展](https://cdnv2.ruguoapp.com/FllJQZ_kio0pQNa11CUfnPvOhWbOv3.jpg) <br/>
+2.  博主Simon的白日梦分享了**开源多模态生成模型** **OmniGen2** 🎨✨，这款模型具备**文本生成图像**、**图像编辑**、**图像理解**及**多图融合**等"Any-to-Any”全流程能力，而且还支持在低显存设备上运行！博主对其在短时间内就达到了**GPT-4o**约70%的"**用嘴改图**”水平表示惊讶🤯，简直是未来可期啊！['更多详情'](https://m.okjike.com/originalPosts/685d56339c2e39aa22e64bbb)
+    <br/> ![OmniGen2模型演示](https://cdnv2.ruguoapp.com/ltYbExXHHBX6-IiH6poCRt4V6YHWv3.png) <br/>
+    <br/> ![OmniGen2图片生成](https://cdnv2.ruguoapp.com/ljDKpsINlzylflPcueaB7KC5dTqSv3.png) <br/>
+    <br/> ![OmniGen2界面](https://cdnv2.ruguoapp.com/ls34LcFxuRD1Baz2eGvajo2pvO52v3.jpg) <br/>
+3.  博主兔撕鸡大老爷兴奋地介绍了**小米AI眼镜** 🕶️💡！这款眼镜简直是科技与时尚的结合，它集**第一人称相机**、**开放式耳机**与**随身AI入口**功能于一身。更棒的是，这款眼镜还支持**百科问答**、**扫码支付**等便捷操作，甚至还有售价1999元起的**电致变色特别版**，简直酷毙了💸！['更多详情'](https://m.okjike.com/originalPosts/685d40dbadecea032f68a102)
+    <br/> ![小米AI眼镜产品图](https://cdnv2.ruguoapp.com/FiYt7G4BWf7RKS6v7g6lhoD0c0CUv3.jpg) <br/>
+    <br/> ![小米AI眼镜功能](https://cdnv2.ruguoapp.com/Fp8KaIdLbsz62uQfat1l48cKg77Kv3.jpg) <br/>
+    <br/> ![小米AI眼镜特写](https://cdnv2.ruguoapp.com/FikgmCpcfMiwXeahMtlwT5OC9oaJv3.jpg) <br/>
+4.  博主小互报道称，**微软** ⚔️暗示将放弃与**OpenAI**就**OpenAI**转型为盈利性公司并上市的谈判，这背后是因为双方在条款上未能达成一致🤔。**OpenAI**希望终止**微软**在模型**知识产权**和20%**收入分成**上的现有权益，但他们提出的新报价并未获得**微软**的认可，甚至有传言称，这可能导致**OpenAI**采取指控**反竞争行为**的"核选项”💥。['更多详情'](https://x.com/imxiaohu/status/1938130680636182595)
+    <br/> ![微软与OpenAI](https://pbs.twimg.com/media/GuVB3L_X0AA1A0L?format=jpg&name=orig) <br/>
+    <br/> ![微软与OpenAI](https://pbs.twimg.com/media/GuVB3L9XwAADR9U?format=jpg&name=orig) <br/>
+5.  Meng Shao分享了Andrej Karpathy的独到观点，他指出在AI应用中，我们更应该强调"**上下文工程**”🧠💡而非简单的"**提示词工程**”。因为"上下文工程”涉及到精心设计**信息窗口**、优化**信息量**及**内容结构**，远比输入几个提示词要复杂得多呢！✨此外，Karpathy还驳斥了AI应用仅仅是"**ChatGPT封装**”的误解，他强调实际开发涵盖了问题拆解、模型选择、UI管理及安全防护等一系列复杂环节，这可不是闹着玩儿的！💪 ['更多详情'](https://x.com/shao__meng/status/1938120617494253712)
+    <br/> ![Andrej Karpathy](https://pbs.twimg.com/media/GuWWbAGbAE7zgH?format=jpg&name=orig) <br/>
+6.  博主wwwgoubuli预测，AI将带来一个"**事实生成轻量应用**”的时代🔮🚀，届时用户将能真正实现"**言出法随**”，即时生成并销毁各种应用，而传统大型软件的营销和推广价值将大幅降低。他认为这得益于**高速推理技术**的普遍化以及**Google Gemini**等模型的突破性体验。他预示着未来AI将像水电煤一样成为**基础设施**，但许多应用本身会变得无形无价，甚至可能导致"**魔法世界入口**”的垄断🌌。['更多详情'](https://x.com/wwwgoubuli/status/1938082798973096160)
 
 ---
 
