Update podcast script file for 2025-06-27

--- a/podcast/2025-06-27.md
+++ b/podcast/2025-06-27.md
@@ -2,69 +2,84 @@
 
 ## Full: Podcast Formatting 
 
-AI高考都上985了，你的饭碗还稳吗？
-AI眼镜是下一代手机，还是昙花一现？
-AI都能自己找漏洞，人类安全工程师还用上班吗？
-嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。对，就是这些让人既兴奋又有点焦虑的话题。废话不多说，咱们赶紧来揭秘今天的“来生情报”。
+当AI考上985，我们未来还需要高考吗？当AI成为水电煤，我们的工作还有价值吗？微软和OpenAI闹掰了，科技巨头还能愉快地玩耍吗？
 
-最近啊，咱们的AI圈子里真是热闹非凡。先说说硬件吧。出门问问推出了个叫TicNote的AI小玩意儿，才3毫米厚，能磁吸在手机上，帮你转写、总结。老板李志飞说，他们未来要避开跟那些科技巨头正面硬刚，走“硬件+软件”结合的路子。这听起来挺聪明的，毕竟，在AI大模型这个战场上，硬碰硬那是真烧钱，小公司得找点巧劲儿。说到硬件，诶，小米最近也搞了个大新闻，推出了AI眼镜！这眼镜可厉害了，集相机、开放式耳机和AI入口于一身，还能百科问答、扫码支付。你说是不是有点《黑客帝国》那味儿了？感觉科技巨头们都在悄悄告诉你：手机可能很快就不再是你的唯一了，嗯，或者说，你可能得戴上点什么新东西了。
-
-再来聊聊声音。ElevenLabs，他们最近发布了Voice Design v3，这玩意儿能让你输入文本，就能生成各种高质量、超有表现力的个性化语音，还支持70多种语言呢！你想想，以后是不是连配音演员都要开始琢磨着怎么跟AI合作了？嗯，或者说，怎么让自己的声音更“有特色”，不那么容易被“复制粘贴”？
-
-好玩儿的来了。AI安全公司XBOW，他们家的AI工具“XBOW”，居然在国际知名漏洞平台HackerOne上，第一次把人类研究员给“干掉”了，登顶美国排行榜第一！这AI全自动渗透测试系统，提交了1060个漏洞，还拿了7500万美元融资。你品品，你细品，这意味着什么？嗯，可能就是我们这些IT狗，以后连“找bug”的饭碗都要被AI抢走了，你说气不气？以后我们是不是要转行去给AI做“Bug管理”了？
-
-说到AI的“智力”，字节跳动Seed团队最近把好几款大模型拉出来，考了考2025年的山东高考真题。结果呢，豆包和Gemini这些大模型，都考出了清华北大、保底985的水平！豆包文科第一，Gemini理科第一。才一年时间，AI高考成绩就蹭蹭往上涨了上百分！感觉它们马上要跟咱们抢饭碗了，而且是高薪的那种。不过人家专家说了，高考已经不再是检验AI“智力”的挑战了，未来它们应该更多地融入科学研究和艺术创作。嗯，这意思就是，AI要从“学霸”变“艺术家”了，是不是？
-
-然后，有个八卦不得不提。微软和OpenAI这对曾经的“模范夫妻”，最近闹掰了，谈判陷僵局。OpenAI想拿回更多主动权，不让微软在模型知识产权和收入分成上占那么多便宜。结果微软不乐意了，甚至有传言说OpenAI可能要使出“反竞争行为”的杀手锏。你看，大佬们谈钱的时候，那可真是刀刀见血，比宫斗剧还精彩。
-
-当然，也有大佬出来给咱们指点迷津。Andrej Karpathy就说了，AI应用开发啊，你别光盯着“提示词工程”那点事儿了，更重要的是“上下文工程”。啥意思呢？就是你得精心设计信息窗口，优化信息量和结构，把前后背景都交代清楚。所以啊，未来跟AI打交道，考验的可能不只是你的“提示词”功力，更是你的“情商”和“逻辑”能力。
-
-最后，再聊个大胆的预测。有位博主wwwgoubuli说，AI要带来一个“事实生成轻量应用”的时代。以后呢，你的想法就是命令，能瞬间生成和销毁各种应用。传统的软件营销和推广可能就没啥用了。他把AI比作“水电煤”，成了基础设施，但很多应用本身会变得无形无价。甚至，这还可能导致“魔法世界入口”的垄断。是不是听着既充满想象力，又有点细思极恐？
-
-今天的情报就到这里，注意隐蔽，赶紧撤离。
-
-本期关键词:
-#AI #TicNote #ElevenLabs #语音生成 #XBOW #漏洞检测 #大模型 #高考 #微软 #OpenAI #小米AI眼镜 #上下文工程 #轻量化应用 #ShadowAI #网络安全 #硬件 #软件
-
-## Short: Podcast Formatting 
-
-当AI在高考中达到985水平，我们还该如何定义智能？
-AI能超越人类发现网络漏洞，我们的网络会更安全还是更脆弱？
-如果AI能让应用“言出法随”，我们是进入魔法世界，还是被少数巨头垄断？
 嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
 
-最近，AI硬件可是扎堆出现。出门问问推出了能吸附在手机上的TicNote，只有3毫米厚，主打AI转写和总结。未来他们还要多推这种搭载“Shadow AI”的智能硬件，走软硬结合的路线。你看，小米也发布了AI眼镜，集相机、耳机和AI入口于一身，还能百科问答、扫码支付，甚至有电致变色的特别版，这AI已经开始武装到你的脸上了。
+嗯，今天咱们来聊点AI界的新鲜事儿，你瞧瞧，这AI啊，真是无孔不入，不光在软件里撒欢，现在都开始“实体化”了。
 
-说到AI的能力，那真是让人惊喜连连。ElevenLabs新推出的语音生成工具Voice Design v3，能让你用文本提示词就创造出高音质、表现力丰富的个性化语音，支持70多种语言，简直是“声控”福音。
+这不，出门问问最近就发布了个名叫TicNote的AI硬件，薄薄3毫米，能磁吸在手机上，还搭载了他们自家基于大模型的Shadow AI。说什么转写啊、总结啊，都不在话下。李志飞的意思是，咱们不跟那些科技巨头硬碰硬，就走“硬件+软件”结合的路子，把AI“粘”到你日常生活的方方面面。话说回来，这年头，AI不粘手机上，都不好意思叫智能硬件了，对吧？
 
-更厉害的是，AI在某些领域已经超越人类了。有家叫XBOW的AI安全公司，他们的AI工具首次在国际漏洞众测平台HackerOne上超越人类研究员，登顶美国榜首，全自动发现并提交了大量漏洞，看来网络安全领域要变天了。还有，字节跳动Seed团队评测了几款主流大模型，它们在2025年山东高考全科闭卷测评中，总体成绩已经能达到冲击清华北大、保底985大学的水平了！短短一年，大模型高考成绩提升了上百分，它们的文本和推理能力真是突飞猛进。
+接着，小米也悄咪咪推出了个AI眼镜。这玩意儿可不得了，集相机、开放式耳机和随身AI入口于一身。以后你戴上眼镜，想问啥就问啥，想付钱扫个码就行。嗯，这感觉就像把未来直接戴在了脸上，酷是酷，就是不知道咱的脸型hold不hold得住。
 
-当然，AI圈子里也有不少“明争暗斗”。比如微软和OpenAI，就OpenAI转型盈利和上市的谈判僵持不下，双方在知识产权和收入分成上没谈拢，这背后是大公司对未来AI主导权的争夺。
+还有啊，咱们的耳朵也要被AI“宠幸”了。ElevenLabs发布了他们的Voice Design v3，这工具超厉害，你只要输入文本，就能生成高音质、情感丰富的个性化语音，还支持70多种语言和上百种口音。以后是不是我的播客也能用AI生成我的嗓音了？那我岂不是能天天放假了？嗯，想想就很美好。
 
-对于AI应用开发，现在流行的说法是，我们要强调“上下文工程”，而不是简单的“提示词工程”。意思就是，AI应用可不是套个ChatGPT壳那么简单，它涉及到信息窗口设计、内容结构优化等等，复杂着呢。
+说完了这些“看得见摸得着”的，咱们再来看看AI的“智力”和“武力值”。
 
-展望未来，有人预测AI将带来一个“事实生成轻量应用”的时代，用户能真正实现“言出法随”，即时生成和销毁各种应用。传统的软件营销可能要没落了。AI会像水电煤一样成为基础设施，但很多应用本身可能变得无形无价，甚至有博主提醒，这可能导致“魔法世界入口”的垄断。
+首先是“武力值”，一家叫XBOW的AI安全公司，他们研发的AI工具“XBOW”，最近在国际漏洞众测平台HackerOne上，居然把人类研究员给超了，登顶了美国排行榜第一！你想想，连找漏洞这种精细活儿，AI都比人类强了，以后网络安全公司是不是得给AI多招几个“技术总监”了？
+
+再来是“智力”。字节跳动的团队最近用2025年山东高考真题，给几款大模型做了个闭卷测评。结果你猜怎么着？豆包Seed 1.6-Thinking和Gemini 2.5 Pro，一个文科第一，一个理科第一，总成绩都达到了冲刺清华北大、保底985的水平！你说这高考啊，以后是不是得给AI留个座儿？咱们人类考的，可能就不是AI考的那回事儿了，得另辟蹊径了。
+
+诶，话说回来，AI圈的“豪门恩怨”最近也挺多的。微软和OpenAI这对“模范CP”，最近就因为一些利益问题，比如模型知识产权啊、收入分成啊，谈判陷入了僵局。据说OpenAI想摆脱微软的一些现有权益，但微软不乐意。这就像是公司内部的“家庭矛盾”，谁也不想让步，这下可有得瞧了。
+
+最后呢，咱们再来聊聊AI应用未来会怎么发展。Andrej Karpathy就说了，别老提什么“提示词工程”了，现在更重要的是“上下文工程”。意思就是，搞AI应用不是简单的“把ChatGPT套个壳”，那太天真了。它涉及到信息窗口的设计、信息量的优化、内容结构，是个技术活儿，复杂着呢。
+
+还有个博主预测啊，AI未来会带来一个“事实生成轻量应用”的时代。啥意思呢？就是以后你可能一句话，一个App就生出来了，用完即焚。传统的那些大型软件的营销推广，可能就没那么大价值了。AI就像水电煤一样，变成基础设施，而应用本身呢，反而变得无形无价。听起来是不是有点像魔法世界，你说啥，它就变啥？
 
 今天的情报就到这里，注意隐蔽，赶紧撤离。
 
 本期关键词:
-#出门问问
+#AI硬件
 #TicNote
+#ShadowAI
 #ElevenLabs
-#VoiceDesign
+#语音生成
 #XBOW
 #漏洞检测
 #大模型
 #高考
 #微软
 #OpenAI
-#AI硬件
-#小米AI眼镜
 #上下文工程
-#AI应用
-#轻量应用
-#AI基础设施
+#轻量化应用
 #AI Agent
-#多模态
+#多模态生成
 #OmniGen2
-#开源
+#小米AI眼镜
+
+## Short: Podcast Formatting 
+
+AI硬件未来会取代手机吗？大模型高考考到985水平，我们的教育还该怎么走？AI真的能帮你“言出法随”，生成各种应用吗？嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
+
+今天有意思的AI消息可不少。出门问问最近推出了他们的新AI硬件TicNote，这个小东西只有3毫米厚，能磁吸在手机上，主要功能就是AI转写和总结。创始人李志飞说，未来公司会把硬件和软件结合起来，避免和那些科技巨头硬碰硬。
+
+说起语音，ElevenLabs发布了他们的Voice Design v3，现在你只要输入文本，就能生成高音质、表达丰富的个性化语音，还支持70多种语言和口音，听起来非常方便。
+
+网络安全领域也传来好消息，AI安全公司XBOW用自家AI工具首次超越了人类研究员，登顶了全球漏洞众测平台HackerOne的美国榜首。这说明AI在漏洞检测上已经相当厉害，未来会重塑网络安全。
+
+最近还有个热门话题，字节跳动对几款主流大模型做了高考评测，结果让人惊喜。像豆包和Gemini这些大模型在2025年山东高考全科闭卷测试中，成绩已经达到了清华北大冲刺、保底985大学的水平！这可只用了一年时间，大模型的文本理解和推理能力进步神速，高考对它们来说已经不是挑战了，未来它们会更多地融入科学研究和艺术创作。
+
+不过，巨头之间的合作也有波折。小道消息说微软和OpenAI在关于OpenAI转型盈利公司的谈判上陷入了僵局，双方在利益分配上没谈拢。
+
+在AI应用方面，有专家提出，“上下文工程”比“提示词工程”更重要。他说我们应该更关注信息窗口的设计和内容结构优化，而不是简单地给AI几句提示。他还强调，开发AI应用可不是简单地把ChatGPT套个壳，背后要处理的问题复杂多了。
+
+还有人预测，AI会带来“事实生成轻量化应用”的时代，以后我们可能真的能做到“言出法随”，即时生成和销毁各种应用，传统软件的营销价值会大大降低。AI将像水电煤一样，成为基础设施，但很多应用本身会变得无形无价。
+
+另外，小米也推出了AI眼镜，它集成了第一人称相机、开放式耳机和随身AI入口，还能百科问答、扫码支付，听起来酷炫又实用。
+
+今天的情报就到这里，注意隐蔽，赶紧撤离。
+
+本期关键词:
+#AI
+#硬件
+#语音生成
+#漏洞检测
+#大模型
+#高考
+#微软
+#OpenAI
+#上下文工程
+#轻量化应用
+#多模态
+#AI Agent
+#AI眼镜
