--- a/daily/2025-06-30.md
+++ b/daily/2025-06-30.md
@@ -7,45 +7,66 @@
 ### **AI内容摘要**
 
 ```
-AI产品与功能更新包括Cursor并行Agent，以及AI协作编写代码的新模式。
-AI前沿研究揭示大模型理解局限，但视频理解与多模态微调获突破。
-AI时代创业成本降低，投资需新框架，同时AI拉平了行业起跑线。
+Cursor倡并行Agent提升效率。研究揭示LLMs推理"波将金式”不一致，质疑AGI前景。
+新型HoPE与MokA模型提升VLM和MLLM性能。AI降低创业成本，拉平起跑线。
+AI投资关注定性指标和方法论，同时警惕其篡改人类文明的潜在风险。
 ```
 
 
 
 ### AI产品与功能更新
-1.  Tom Huang (@tuturetom) 分享了如何巧妙运用 **Cursor** 核心开发者提出的「**并行 Agents**」关键技术，通过 **Tab**、**Formed Tab** 和 **Background Agent** 组合拳，来构建一套超高效的任务执行系统！✨ 旨在帮助用户更智能、更高效地驾驭 **Cursor** 工具。💻 ['更多详情'](https://x.com/tuturetom/status/1939321864200888536)
-    <br/> ![Cursor并行Agents](https://pbs.twimg.com/media/Guna8_wW4AAkmqU?format=jpg&name=orig) <br/>
-2.  一位开发者分享了他与AI**协作编写代码**的新颖模式：不再直接给出详细指令，而是先向**AI**阐述项目背景和目标，让**AI**根据现有代码提供思路，以此实现**"对齐颗粒度”**。🤝 这种方式在项目早期尤其给力，能帮助纠正初始想法的偏差，并巧妙简化人类难以搞定的复杂规划，充分展现了**AI**在编程协作中的独特优势！🚀 ['更多详情'](https://x.com/wwwgoubuli/status/1939168328070603017)
+
+1.  Cursor 核心开发者 Tom Huang 分享了利用 **Cursor** 更高效工作的方法，关键在于运用「**并行 Agents**」理念，建议通过 **Tab**、**Formed Tab** 和 **Background Agent** 来构建高效的任务执行系统。💻⚡
+    <br/> [![图片](https://pbs.twimg.com/media/Guna8_wW4AAkmqU?format=jpg&name=orig)](https://pbs.twimg.com/media/Guna8_wW4AAkmqU?format=jpg&name=orig) <br/>
+    ['更多详情'](https://x.com/tuturetom/status/1939321864200888536)
 
 ### AI前沿研究
-1.  知名人工智能学者 **Gary Marcus** 转发一篇来自 **MIT**、**芝加哥大学**、**哈佛大学**的合作论文，指出大型语言模型（**LLMs**）存在"波将金式”推理不一致性，并据此宣告纯粹基于LLM构建**通用人工智能（AGI）**的希望可能终结！😮‍💨 尽管评论区看法不一，谷歌DeepMind的科学家**Prateek Jain**表示**Gemini 2.5 Pro**在测试中表现良好，呼吁更全面验证。这篇名为《**大型语言模型中的波将金式理解**》的论文提出框架，量化了**LLM**在概念理解上与人类的深层差异，揭示了模型虽能定义概念却常在应用中出错，其内部**概念表征**存在矛盾。🤔 ['更多详情'](https://www.jiqizhixin.com/articles/2025-06-29-5) ['论文地址'](https://arxiv.org/pdf/2506.21521)
-    <br/> ![LLMs波将金式理解](https://image.jiqizhixin.com/uploads/editor/b5b4277df-6e65-4e28-8542-5a887d13130f/640.png) <br/>
-    <br/> ![模型概念表征矛盾](https://image.jiqizhixin.com/uploads/editor/101aabbf-4103-4b4c-b188-081f6c1e3517/640.png) <br/>
-2.  来自 **CMU** 和小红书的研究团队联手推出了**HoPE（Hybrid of Position Embedding）**，旨在攻克视觉语言模型（**VLM**）在**长视频理解**和检索中的关键瓶颈，显著增强其**长度泛化能力**！📈 这项研究深入分析了现有**多模态旋转位置编码（RoPE）**在长上下文语义建模中的不足，并创新性地融合了**零频率时间建模**和**多尺度时序学习**的混合位置编码策略，最终在长视频理解与检索任务中取得了顶尖表现。🎬✨ ['论文地址'](https://arxiv.org/pdf/2505.20444) ['项目地址'](https://github.com/hrlics/HoPE)
-    <br/> ![HoPE概念图](https://image.jiqizhixin.com/uploads/editor/4bafbfbf-6eba-48b5-afe0-4a4cc4cf8acd/640.png) <br/>
-    <br/> ![HoPE性能提升](https://image.jiqizhixin.com/uploads/editor/a0724321-2e59-4b4c-b188-081f6c1e3517/640.png) <br/>
-3.  中国人民大学和上海人工智能实验室的研究团队共同发布了**MokA（Multimodal low-rank Adaptation）**，一种专为**多模态大模型（MLLMs）**设计的高效**微调新范式**！🆕🤖 该方法巧妙地解决了现有微调策略对**单模态信息独立建模**及**模态间交互建模**的不足，通过引入模态特异性矩阵和跨模态注意力机制，在多模态场景下实现了模型性能的显著飞跃。🚀 ['论文地址'](https://arxiv.org/abs/2506.05191) ['项目地址'](https://gewu-lab.github.io/MokA)
-    <br/> ![MokA微调范式](https://image.jiqizhixin.com/uploads/editor/a4a4af71-986e-4159-882c-98e4499b5bff/640.png) <br/>
-    <br/> ![MokA性能对比](https://image.jiqizhixin.com/uploads/editor/0dac2061-2746-4f2c-9304-8e503330c3d7/640.png) <br/>
+
+1.  Gary Marcus 转推了一篇由 MIT、芝加哥大学、哈佛大学合著的论文，该研究揭示了大型语言模型（**LLMs**）在推理中存在"**波将金式**”不一致性，即便顶级模型也频繁犯错。Marcus 因此断言纯 **LLMs** 构建**通用人工智能（AGI）**的希望已终结，引发了行业内关于 **LLM** 能力的广泛讨论。这篇题为《Potemkin Understanding in Large Language Models》的论文通过形式化框架量化了 **LLMs** 的这种"波将金式理解”现象，指出其在概念表征上存在深层内在矛盾，即使模型能正确定义概念，也难以准确应用，从而呼吁对 **LLM** 评估方式进行反思。🤯❓
+    ['更多详情'](https://www.jiqizhixin.com/articles/2025-06-29-5)
+    ['论文地址'](https://arxiv.org/pdf/2506.21521)
+    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/e72097cc-e820-4597-a0ec-c2b312306e3e/640.png)](https://image.jiqizhixin.com/uploads/editor/e72097cc-e820-4597-a0ec-c2b312306e3e/640.png) <br/>
+    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/8fa03d2d-2c7d-4202-897e-50abdc401e18/640.png)](https://image.jiqizhixin.com/uploads/editor/8fa03d2d-2c7d-4202-897e-50abdc401e18/640.png) <br/>
+2.  为解决视觉语言模型（**VLM**）在长视频理解中的不足，CMU 和小红书的研究团队提出了一种名为 **HoPE**（Hybrid of Position Embedding）的**混合位置编码**。HoPE 通过首次针对多模态旋转位置编码（**RoPE**）扩展策略进行理论评估，发现现有方法限制了语义建模，并通过结合时间维度的零频率建模和动态缩放策略，显著提升了 **VLM** 的**长度泛化能力**，在长视频理解和检索任务中达到了最优表现。🎬✨
+    ['论文地址'](https://arxiv.org/pdf/2505.20444)
+    ['代码链接'](https://github.com/hrlics/HoPE)
+    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/07c7463b-a718-45d0-bd66-7446710db689/640.png)](https://image.jiqizhixin.com/uploads/editor/07c7463b-a718-45d0-bd66-7446710db689/640.png) <br/>
+    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/cc288ff5-7708-4b62-9e4a-a57e3610f82b/640.png)](https://image.jiqizhixin.com/uploads/editor/cc288ff5-7708-4b62-9e4a-a57e3610f82b/640.png) <br/>
+3.  中国人民大学与上海人工智能实验室的研究团队提出了一种专为多模态大模型（**MLLMs**）设计的微调新范式——**MokA**（Multimodal low-rank Adaptation），旨在克服现有方法忽视多模态数据异质性的局限。**MokA** 通过模态特异的 A 矩阵、跨模态注意力机制和模态共享的 B 矩阵，同时兼顾了单模态信息的独立建模与模态间的充分交互，在音频-视觉-文本、视觉-文本、语音-文本等多种任务场景和主流 **LLM** 基座上均实现了显著的性能提升。💡🚀
+    ['论文链接'](https://arxiv.org/abs/2506.05191)
+    ['项目主页'](https://gewu-lab.github.io/MokA)
+    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/0dac2061-2746-4f2c-9304-8e503330c3d7/640.png)](https://image.jiqizhixin.com/uploads/editor/0dac2061-2746-4f2c-9304-8e503330c3d7/640.png) <br/>
+    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/7e11d47c-1627-4d37-8cda-ee12a31a26e5/640.png)](https://image.jiqizhixin.com/uploads/editor/7e11d47c-1627-4d37-8cda-ee12a31a26e5/640.png) <br/>
 
 ### AI行业展望与社会影响
-1.  Yangyi (@Yangyixxxx) 深入剖析了内容创作领域的「**注意力套利窗口**」，他指出**AI**正在将行业从**内容杠杆**转向**人类内容溢价**的新趋势。😲 他更是对**AI**以极低**边际成本**无情**篡改人类文明**及**精神文化**的未来表达了深切的忧虑。😱 他引用 GREG ISENBERG 的观察，强调海量**AI回复机器人**和**虚拟账号**已成为社交媒体的"新常态”，预示着**AI**影响的广度和深度超乎想象。🌐 ['更多详情'](https://x.com/Yangyixxxx/status/1939318396111430096)
-2.  Yangyi (@Yangyixxxx) 认为在**AI时代创业**与以往截然不同，其核心在于**MVP**构建**成本**的大幅降低，使得**想法验证**周期缩短至短短数日！😮‍💨 他建议创业者们应当充分利用**AI**，摒弃冗长的讨论，通过「**3个月30个项目**」的**快速试错**模式，高效地找到并投入真正有价值的创业方向！🏃‍♀️💨 ['更多详情'](https://x.com/Yangyixxxx/status/1939278373978857614)
-3.  AI投资人杨毅强调，评估**AI创业项目**时应跳出传统数据指标的束缚，转而聚焦**五大定性因素**：创始人对未来路径的**宏图规划**、团队对AI的**坚定信念**、团队自身利用**AI**提升的**管理效率**、为**AI Agent**构建的**反馈闭环**以及**多智能体框架**的未来扩展性。💡 他认为这五点才是决定项目**投资价值**的关键，而留存和用户量不过是时间自然结出的果实。🌱 ['更多详情'](https://x.com/Yangyixxxx/status/1939212085185093664)
-4.  作者指出，部分投资人仍然抱持**移动互联网时代的数据指标**来寻找**AI项目**，导致他们苦苦寻觅却难以找到符合旧标准的"留存好”项目，迟迟未能出手投资。🤦‍♂️ 这反映了传统逻辑和概率论在面对未来决策时，过分依赖历史数据的局限性。而**贝叶斯定律**则被视为一种面向未来的应用，暗示着**AI投资**亟需一套全新的评估框架！🤔📊 ['更多详情'](https://m.okjike.com/originalPosts/6860acdfd82bae994ab2ac0e)
-    <br/> ![AI投资新视角](https://cdnv2.ruguoapp.com/FkJ8Cttpht-FSudcqveStLiBY6BBv3.png) <br/>
-    <br/> ![贝叶斯定律启示](https://cdnv2.ruguoapp.com/FhaVZhhtXfzamqX8c4dNBF62yfZRv3.png) <br/>
-5.  大帅老猿犀利指出，**AI**的横空出世，已然拉齐了各行各业的**起跑线**，并严厉警告那些短视、不思进取的**程序员**，**AI**终将追上他们！🏃‍♀️💨 他引用 Dash 的观点，强调**AI**对**新人**而言是前所未有的巨大机遇，甚至超越了20年前的互联网浪潮，因为它彻底打破了知识和资源在学习与实现上的限制！🌟💡 ['更多详情'](https://x.com/ezshine/status/1939097986682036566)
+
+1.  Yangyi 认为当前存在一个「**注意力套利窗口**」：少数人已利用 **AI** 构建内容杠杆，而当绝大多数人使用 **AI** 后，人类内容创作将产生溢价。然而，他更担忧 **AI** 会以极低的「**边际成本**」**篡改人类文明**，通过蚕食精神文化来影响人类。他引用 Greg Isenberg 的观察，指出大量 **AI** 账号在社交媒体上泛滥已成「新常态」。🤔⚠️
+    ['更多详情'](https://x.com/Yangyixxxx/status/1939318396111430096)
+2.  Yangyi 指出 **AI时代创业** 的最大不同在于「**构建MVP的成本**」大幅降低，使创业者能以极低的成本快速验证想法。他建议不必纠结想法好坏，直接利用 **AI** 在短短几天内完成「**想法验证**」，甚至能在三个月内尝试三十个想法，从而大大提高找到有价值项目的机会。💡📈
+    ['更多详情'](https://x.com/Yangyixxxx/status/1939278373978857614)
+3.  AI 投资人杨毅强调，在对 AI 创业项目进行投资时，他更倾向于关注定性指标，包括**创始人**对 **Agent** 未来**路径的宏图规划**、团队对 AI **信念**的坚定程度、团队**管理**中对 **AI 利用**的效率、**Agent** 如何构建**反馈闭环**以实现自我提升（即**AI 成功的方法论**），以及**多智能体框架**的**扩展性**。他认为这五点共同决定了项目的投资价值，而非简单看留存或用户量等传统指标。💰🧐
+    ['更多详情'](https://x.com/Yangyixxxx/status/1939212085185093664)
+4.  有观点指出，部分**投资人**仍在沿用**移动互联网**时代的**数据指标**来评估**AI行业**项目，导致难以找到"留存好”的 AI 项目，甚至三年未出手投资。这可能是因为**形式逻辑**、**非形式逻辑**及**概率论**本质上都**面向过去**，而**贝叶斯定律**则是一种**面向未来**的分析方法，更适用于指导当下的决策。📊🔮
+    <br/> [![图片](https://cdnv2.ruguoapp.com/FkJ8Cttpht-FSudcqveStLiBY6BBv3.png)](https://cdnv2.ruguoapp.com/FkJ8Cttpht-FSudcqveStLiBY6BBv3.png) <br/>
+    <br/> [![图片](https://cdnv2.ruguoapp.com/FhaVZhhtXfzamqX8c4dNBF62yfZRv3.png)](https://cdnv2.ruguoapp.com/FhaVZhhtXfzamqX8c4dNBF62yfZRv3.png) <br/>
+    ['更多详情'](https://m.okjike.com/originalPosts/6860acdfd82bae994ab2ac0e)
+5.  大帅老猿与 Dash 一致认为，**AI** 的出现极大地**拉平了起跑线**，对于新人而言是比 20 年前互联网更大的机遇，使他们能**利用 AI** 突破资源限制实现目标。他们强调，若程序员固步自封不思进取，这条起跑线最终会追上并取代他们。🏁🚀
+    ['更多详情'](https://x.com/ezshine/status/1939097986682036566)
     <video src="https://video.twimg.com/amplify_video/1938922173013651456/vid/avc/1920x1080/lVHNYiDsj_o_yd27.mp4?tag=21" controls="controls" width="100%"></video>
 
 ### 开源TOP项目
-1.  **generative-ai-for-beginners**是一个拥有**86547**颗星✨的项目，它通过21节精心设计的课程，手把手教导初学者如何步入**生成式AI**领域，并亲手打造应用！🚀 ['项目地址'](https://github.com/microsoft/generative-ai-for-beginners)
-2.  坐拥**62777**颗星🌟的**system-prompts-and-models-of-ai-tools**项目，像一个宝库一样，汇集了Cursor、Devin等各种**AI工具**的完整**系统提示**、工具集及**AI模型**，为开发者们提供了极大的便利！🛠️ ['项目地址'](https://github.com/x1xhlol/system-prompts-and-models-of-tools)
-3.  **storm**项目是一个由大型语言模型（**LLM**）驱动的智能**知识管理系统**，已获得**24892**颗星⭐！它能像一位🔍侦探般深入研究特定主题，并自动生成带有详细引用的完整报告，极大地提升了信息整理与内容创作的效率！📝💡 ['项目地址'](https://github.com/stanford-oval/storm)
+
+1.  **generative-ai-for-beginners** 是一个拥有 86547 星的开源项目，旨在通过 21 节课程帮助初学者入门并使用**生成式AI**进行**构建**。✨
+    ['项目地址'](https://github.com/microsoft/generative-ai-for-beginners)
+2.  拥有 62777 星的 **system-prompts-and-models-of-ai-tools** 项目，收集了包括 Cursor、Devin 等多种**AI 工具**的**系统提示**、**工具**和**AI 模型**，为开发者提供便利。🛠️
+    ['项目地址'](https://github.com/x1xhlol/system-prompts-and-models-of-ai-tools)
+3.  **storm** 是一个 24892 星的开源项目，它是一个由 **LLM** 驱动的**知识管理系统**，能够自主**研究**特定主题并生成带有**引用**的完整报告。🔍
+    ['项目地址'](https://github.com/stanford-oval/storm)
 
 ### 社媒分享
+
+1.  在与**AI 交流写代码**的过程中，一位开发者分享了一种更高效的**协作模式**：不再一开始就给出详细需求，而是先让 AI 了解**项目上下文**、文档、代码风格和项目目标，然后让 AI 提出思路，双方共同**对齐颗粒度**。这种方法不仅能避免人脑在复杂**规划**上的局限性，还能大幅提升**效率**，即便在代码编写以外的领域也同样适用。🤝🤖
+    ['更多详情'](https://x.com/wwwgoubuli/status/1939168328070603017)
 
 ---
 
