Update daily summary file for 2025-06-30

--- a/daily/2025-06-30.md
+++ b/daily/2025-06-30.md
@@ -7,66 +7,52 @@
 ### **AI内容摘要**
 
 ```
-Cursor倡并行Agent提升效率。研究揭示LLMs推理"波将金式”不一致，质疑AGI前景。
-新型HoPE与MokA模型提升VLM和MLLM性能。AI降低创业成本，拉平起跑线。
-AI投资关注定性指标和方法论，同时警惕其篡改人类文明的潜在风险。
+CMU等推HoPE提升VLM长视频理解，人大等MokA优化多模态模型。
+开源项目涵盖生成式AI教程与AI工具库。Gary Marcus质疑纯LLM难达AGI。
+AI显著降低创业门槛，促投资思变，鼓励拥抱协作把握时代机遇。
 ```
 
 
 
-### AI产品与功能更新
-
-1.  Cursor 核心开发者 Tom Huang 分享了利用 **Cursor** 更高效工作的方法，关键在于运用「**并行 Agents**」理念，建议通过 **Tab**、**Formed Tab** 和 **Background Agent** 来构建高效的任务执行系统。💻⚡
-    <br/> [![图片](https://pbs.twimg.com/media/Guna8_wW4AAkmqU?format=jpg&name=orig)](https://pbs.twimg.com/media/Guna8_wW4AAkmqU?format=jpg&name=orig) <br/>
-    ['更多详情'](https://x.com/tuturetom/status/1939321864200888536)
-
 ### AI前沿研究
 
-1.  Gary Marcus 转推了一篇由 MIT、芝加哥大学、哈佛大学合著的论文，该研究揭示了大型语言模型（**LLMs**）在推理中存在"**波将金式**”不一致性，即便顶级模型也频繁犯错。Marcus 因此断言纯 **LLMs** 构建**通用人工智能（AGI）**的希望已终结，引发了行业内关于 **LLM** 能力的广泛讨论。这篇题为《Potemkin Understanding in Large Language Models》的论文通过形式化框架量化了 **LLMs** 的这种"波将金式理解”现象，指出其在概念表征上存在深层内在矛盾，即使模型能正确定义概念，也难以准确应用，从而呼吁对 **LLM** 评估方式进行反思。🤯❓
-    ['更多详情'](https://www.jiqizhixin.com/articles/2025-06-29-5)
-    ['论文地址'](https://arxiv.org/pdf/2506.21521)
-    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/e72097cc-e820-4597-a0ec-c2b312306e3e/640.png)](https://image.jiqizhixin.com/uploads/editor/e72097cc-e820-4597-a0ec-c2b312306e3e/640.png) <br/>
-    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/8fa03d2d-2c7d-4202-897e-50abdc401e18/640.png)](https://image.jiqizhixin.com/uploads/editor/8fa03d2d-2c7d-4202-897e-50abdc401e18/640.png) <br/>
-2.  为解决视觉语言模型（**VLM**）在长视频理解中的不足，CMU 和小红书的研究团队提出了一种名为 **HoPE**（Hybrid of Position Embedding）的**混合位置编码**。HoPE 通过首次针对多模态旋转位置编码（**RoPE**）扩展策略进行理论评估，发现现有方法限制了语义建模，并通过结合时间维度的零频率建模和动态缩放策略，显著提升了 **VLM** 的**长度泛化能力**，在长视频理解和检索任务中达到了最优表现。🎬✨
-    ['论文地址'](https://arxiv.org/pdf/2505.20444)
-    ['代码链接'](https://github.com/hrlics/HoPE)
-    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/07c7463b-a718-45d0-bd66-7446710db689/640.png)](https://image.jiqizhixin.com/uploads/editor/07c7463b-a718-45d0-bd66-7446710db689/640.png) <br/>
-    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/cc288ff5-7708-4b62-9e4a-a57e3610f82b/640.png)](https://image.jiqizhixin.com/uploads/editor/cc288ff5-7708-4b62-9e4a-a57e3610f82b/640.png) <br/>
-3.  中国人民大学与上海人工智能实验室的研究团队提出了一种专为多模态大模型（**MLLMs**）设计的微调新范式——**MokA**（Multimodal low-rank Adaptation），旨在克服现有方法忽视多模态数据异质性的局限。**MokA** 通过模态特异的 A 矩阵、跨模态注意力机制和模态共享的 B 矩阵，同时兼顾了单模态信息的独立建模与模态间的充分交互，在音频-视觉-文本、视觉-文本、语音-文本等多种任务场景和主流 **LLM** 基座上均实现了显著的性能提升。💡🚀
-    ['论文链接'](https://arxiv.org/abs/2506.05191)
-    ['项目主页'](https://gewu-lab.github.io/MokA)
-    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/0dac2061-2746-4f2c-9304-8e503330c3d7/640.png)](https://image.jiqizhixin.com/uploads/editor/0dac2061-2746-4f2c-9304-8e503330c3d7/640.png) <br/>
-    <br/> [![图片](https://image.jiqizhixin.com/uploads/editor/7e11d47c-1627-4d37-8cda-ee12a31a26e5/640.png)](https://image.jiqizhixin.com/uploads/editor/7e11d47c-1627-4d37-8cda-ee12a31a26e5/640.png) <br/>
+1.  **CMU**和**小红书**团队携手，提出了一项创新技术——**HoPE**（**Hybrid of Position Embedding**）**混合位置编码**！🚀他们发现，现有的**多模态RoPE**在处理**长上下文语义建模**时有点"力不从心”。于是，HoPE巧妙地引入了**零频率时间建模**和**动态缩放**策略，这就像给**视觉语言模型**（**VLM**）装上了"长跑专用鞋”，显著增强了它们在**长视频理解**和**检索**任务中的**长度泛化能力**，直接冲向了最优表现！💡太酷了！ ['论文地址'](https://arxiv.org/pdf/2505.20444) ['项目地址'](https://github.com/hrlics/HoPE)
+    <br/> ![CMU小红书HoPE位置编码](https://image.jiqizhixin.com/uploads/editor/4bafbfbf-6eba-48b5-afe0-4a4cc4cf8acd/640.png) <br/>
 
-### AI行业展望与社会影响
-
-1.  Yangyi 认为当前存在一个「**注意力套利窗口**」：少数人已利用 **AI** 构建内容杠杆，而当绝大多数人使用 **AI** 后，人类内容创作将产生溢价。然而，他更担忧 **AI** 会以极低的「**边际成本**」**篡改人类文明**，通过蚕食精神文化来影响人类。他引用 Greg Isenberg 的观察，指出大量 **AI** 账号在社交媒体上泛滥已成「新常态」。🤔⚠️
-    ['更多详情'](https://x.com/Yangyixxxx/status/1939318396111430096)
-2.  Yangyi 指出 **AI时代创业** 的最大不同在于「**构建MVP的成本**」大幅降低，使创业者能以极低的成本快速验证想法。他建议不必纠结想法好坏，直接利用 **AI** 在短短几天内完成「**想法验证**」，甚至能在三个月内尝试三十个想法，从而大大提高找到有价值项目的机会。💡📈
-    ['更多详情'](https://x.com/Yangyixxxx/status/1939278373978857614)
-3.  AI 投资人杨毅强调，在对 AI 创业项目进行投资时，他更倾向于关注定性指标，包括**创始人**对 **Agent** 未来**路径的宏图规划**、团队对 AI **信念**的坚定程度、团队**管理**中对 **AI 利用**的效率、**Agent** 如何构建**反馈闭环**以实现自我提升（即**AI 成功的方法论**），以及**多智能体框架**的**扩展性**。他认为这五点共同决定了项目的投资价值，而非简单看留存或用户量等传统指标。💰🧐
-    ['更多详情'](https://x.com/Yangyixxxx/status/1939212085185093664)
-4.  有观点指出，部分**投资人**仍在沿用**移动互联网**时代的**数据指标**来评估**AI行业**项目，导致难以找到"留存好”的 AI 项目，甚至三年未出手投资。这可能是因为**形式逻辑**、**非形式逻辑**及**概率论**本质上都**面向过去**，而**贝叶斯定律**则是一种**面向未来**的分析方法，更适用于指导当下的决策。📊🔮
-    <br/> [![图片](https://cdnv2.ruguoapp.com/FkJ8Cttpht-FSudcqveStLiBY6BBv3.png)](https://cdnv2.ruguoapp.com/FkJ8Cttpht-FSudcqveStLiBY6BBv3.png) <br/>
-    <br/> [![图片](https://cdnv2.ruguoapp.com/FhaVZhhtXfzamqX8c4dNBF62yfZRv3.png)](https://cdnv2.ruguoapp.com/FhaVZhhtXfzamqX8c4dNBF62yfZRv3.png) <br/>
-    ['更多详情'](https://m.okjike.com/originalPosts/6860acdfd82bae994ab2ac0e)
-5.  大帅老猿与 Dash 一致认为，**AI** 的出现极大地**拉平了起跑线**，对于新人而言是比 20 年前互联网更大的机遇，使他们能**利用 AI** 突破资源限制实现目标。他们强调，若程序员固步自封不思进取，这条起跑线最终会追上并取代他们。🏁🚀
-    ['更多详情'](https://x.com/ezshine/status/1939097986682036566)
-    <video src="https://video.twimg.com/amplify_video/1938922173013651456/vid/avc/1920x1080/lVHNYiDsj_o_yd27.mp4?tag=21" controls="controls" width="100%"></video>
+2.  惊艳！**中国人民大学**和**上海人工智能实验室**团队带来了新突破——**MokA**（**Multimodal low-rank Adaptation**）方法！🤯他们发现，微调**多模态大模型**（**MLLM**）时，常常顾此失彼，忽视了**单模态独立建模**和**模态间交互**的平衡。MokA则像个平衡大师，通过**模态特异A矩阵**、**跨模态注意力机制**和**共享B矩阵**的巧妙结合，完美解决了这个问题，让多模态任务的性能"蹭蹭蹭”地往上涨！✨太赞了！ ['论文地址'](https://arxiv.org/abs/2506.05191) ['更多详情'](https://gewu-lab.github.io/MokA)
+    <br/> ![MokA多模态低秩适配方法](https://image.jiqizhixin.com/uploads/editor/a4a4af71-986e-4159-882c-9899b5bff/640.png) <br/>
 
 ### 开源TOP项目
 
-1.  **generative-ai-for-beginners** 是一个拥有 86547 星的开源项目，旨在通过 21 节课程帮助初学者入门并使用**生成式AI**进行**构建**。✨
-    ['项目地址'](https://github.com/microsoft/generative-ai-for-beginners)
-2.  拥有 62777 星的 **system-prompts-and-models-of-ai-tools** 项目，收集了包括 Cursor、Devin 等多种**AI 工具**的**系统提示**、**工具**和**AI 模型**，为开发者提供便利。🛠️
-    ['项目地址'](https://github.com/x1xhlol/system-prompts-and-models-of-ai-tools)
-3.  **storm** 是一个 24892 星的开源项目，它是一个由 **LLM** 驱动的**知识管理系统**，能够自主**研究**特定主题并生成带有**引用**的完整报告。🔍
-    ['项目地址'](https://github.com/stanford-oval/storm)
+1.  "**generative-ai-for-beginners**”项目（拥有86547颗星🌟）推出了21节课程，专为初学者打造，手把手教你掌握**生成式AI**的**构建技能**！想成为AI魔法师？快来学习吧！💪✨ ['项目地址'](https://github.com/microsoft/generative-ai-for-beginners)
+
+2.  "**system-prompts-and-models-of-ai-tools**”项目（已获62777颗星✨）简直是个宝藏库！它汇集了Cursor、Devin等热门AI工具和代理的**系统提示**、**工具**和**AI模型**，为你提供一站式的全面参考，帮你玩转AI工具！📚💡 ['项目地址'](https://github.com/x1xhlol/system-prompts-and-models-of-ai-tools)
+
+3.  "**storm**”项目（已获24892颗星⭐）可厉害了！它是一个由**LLM驱动的知识管理系统**，能像个小小研究员一样，自主研究特定主题，然后生成带**引用**的完整**报告**。写论文、做调研，简直是神助手！🧠✍️ ['项目地址'](https://github.com/stanford-oval/storm)
 
 ### 社媒分享
 
-1.  在与**AI 交流写代码**的过程中，一位开发者分享了一种更高效的**协作模式**：不再一开始就给出详细需求，而是先让 AI 了解**项目上下文**、文档、代码风格和项目目标，然后让 AI 提出思路，双方共同**对齐颗粒度**。这种方法不仅能避免人脑在复杂**规划**上的局限性，还能大幅提升**效率**，即便在代码编写以外的领域也同样适用。🤝🤖
-    ['更多详情'](https://x.com/wwwgoubuli/status/1939168328070603017)
+1.  知名AI学者**Gary Marcus**又"开炮”了！🤔他援引**MIT、芝加哥大学、哈佛大学**的论文，直言不讳地指出，纯粹的**LLM**压根儿造不出**通用人工智能**（**AGI**）！为啥呢？因为它们存在"**波将金式理解**”（虚假理解）和**概念不一致性**。简单说就是，AI在考试时可能表现亮眼，但真正理解和运用概念时就露馅了。研究还发现，像**GPT-4o**这样的**LLM**，在明确定义概念后，一旦应用到分类、生成、编辑等实际任务中，表现就会直线下降📉，甚至内部对同一思想都有**冲突表征**。这可引发了**谷歌DeepMind科学家Prateek Jain**等业界大咖的广泛关注和测试！看来，AI通往AGI的路还长着呢！💡 ['更多详情'](https://www.jiqizhixin.com/articles/2025-06-29-5)
+    <br/> ![Gary Marcus AI观点图](https://image.jiqizhixin.com/uploads/editor/e72097cc-e856-4597-a0ec-c2b31246e3e/640.png) <br/>
+    <br/> ![LLM概念不一致性分析](https://image.jiqizhixin.com/uploads/editor/d3e2a41e-6387-466a-88c6-a4c55621ae40/640.png) <br/>
+
+2.  **Tom Huang**揭秘了**Cursor**核心开发者的高效秘籍！🚀想更高效地利用Cursor？他们教你用"**并行Agents**”！通过巧妙结合**Tab**、**Formed Tab**和**Background Agent**，你可以搭建一套超高效的**任务执行系统**，让你的AI协作💻如虎添翼！快去看看怎么操作吧！ ['更多详情'](https://x.com/tuturetom/status/1939321864200888536)
+    <br/> ![Cursor并行Agents工作流](https://pbs.twimg.com/media/Guna8_wW4AAkmqU?format=jpg&name=orig) <br/>
+
+3.  杨毅老师提出了一个引人深思的观点：现在内容创作领域正处于一个"**注意力套利窗口**”😮‍💨！他说，已经有人利用**AI**来"**构建内容杠杆**”了，预示着未来当AI普及后，**人类原创内容**将变得越来越值钱，甚至产生溢价。但更让他担忧的是，**AI**可能会以极低的成本逐渐"**蚕食人类精神文化**”——这可比内容创作方式的转变可怕多了！✍️深思ing... ['更多详情'](https://x.com/Yangyixxxx/status/1939318396111430096)
+
+4.  杨毅老师认为，在**AI时代**，**创业**的门槛简直被AI"打骨折”了！💸构建**MVP**（最小可行产品）的成本大幅降低，让**快速验证想法**成为可能。他给创业者的建议是：别再纠结想法靠不靠谱了，直接用**AI**在短短3天内就能验证一个MVP，甚至可以在3个月内快速尝试30个想法！这样，你就能更快找到那个真正值得全身心投入的方向！🚀💡太给力了！ ['更多详情'](https://x.com/Yangyixxxx/status/1939278373978857614)
+
+5.  作为一名AI**投资人**，杨毅分享了他不看硬数据，更看重**定性指标**的"秘密武器”📈！他认为判断一个AI创业项目有没有投资价值，关键看五点：创始人对未来路径的**宏图规划**（包括PMF和**扩展性**）、团队的**信念**有多坚定、AI在团队管理中提升了多少**效率**、Agent是否有完善的**反馈闭环**（这可是AI成功的**方法论**！），以及**多智能体框架**的**扩展性**如何。他觉得，用户留存这些数据，那都是时间到了自然就会有的"副产品”嘛！🎯眼光独到！ ['更多详情'](https://x.com/Yangyixxxx/status/1939212085185093664)
+
+6.  有用户分享了一个和AI**交流写代码**的"新姿势”👨‍💻，这种模式越来越流行：先别急着给AI详细指令，而是先向它交代清楚项目背景和目标，然后让AI自己基于这些信息提出思路，再一起**对齐颗粒度**进行讨论。这种方式巧妙地利用了AI快速理解上下文的**效率**，弥补了我们人类在做详细规划时的"脑细胞不足”，大大提升了**协作模式**下的工作效率！🤝简直是程序员福音！ ['更多详情'](https://x.com/wwwgoubuli/status/1939168328070603017)
+
+7.  有用户吐槽说，现在的部分**投资人**还在用**移动互联网**那一套老旧的**数据指标**来评估AI项目，结果就是——根本找不到好项目！🤔因为那些传统的**逻辑**（形式的、非形式的、甚至**概率论**）都是在回顾过去。而作者强调，**贝叶斯定律**才是一种真正面向未来的**决策**方法，它更适合用来给**AI行业**的项目做投资判断！💡是时候更新投资"操作系统”了！ ['更多详情'](https://m.okjike.com/originalPosts/6860acdfd82bae994ab2ac0e)
+    <br/> ![投资评估新视角](https://cdnv2.ruguoapp.com/FkJ8CttPht-FSudcqveStLiBY6BBv3.png) <br/>
+    <br/> ![贝叶斯定律AI投资](https://cdnv2.ruguoapp.com/FhaVZhhtXfzamqX8c4dNBF62yfZRv3.png) <br/>
+
+8.  大帅老猿和他的同事Dash直言不讳地指出：**AI**的横空出世，简直是给全人类"**拉平了起跑线**”🏃‍♀️💨！他们认为，AI带来的巨大机遇甚至超越了20年前的互联网浪潮，让包括初级员工在内的所有人，都能摆脱资源限制，尽情地利用AI去学习和创造。但他们也警告说，如果程序员们还固步自封、不思进取，那么这条"起跑线”最终也会追上你，甚至把你甩在身后！所以，积极拥抱AI才是王道啊！
+    <video src="https://video.twimg.com/amplify_video/1938922173013651456/vid/avc/1920x1080/lVHNYiDsj_o_yd27.mp4" controls="controls" width="100%"></video> ['更多详情'](https://x.com/ezshine/status/1939097986682036566)
 
 ---
 
